# UNIPI-FOS

./: .gitignore  README.md
Client/: CMakeLists.txt  Makefile  README.md  main.cpp
Client/libs/: AsyncInput.cpp  AsyncInput.hpp  CryptoClient.cpp  CryptoClient.hpp  ServerManager.cpp  ServerManager.hpp  default-config.conf  default-config.json
Server/: CMakeLists.txt  Makefile  README.md  main.cpp  server.cer
Server/libs/: ClientManager.cpp  ClientManager.hpp  CryptoServer.cpp  CryptoServer.hpp  Message.hpp  PersistentMemory.cpp  PersistentMemory.hpp  ThreadPool.cpp  ThreadPool.hpp  UUID.cpp  UUID.hpp  User.hpp  default-config.conf  default-config.json
Server/managers/: configmanager.cpp  configmanager.hpp
shared-certificates/: README.md
shared-libs/: ConfigManager.cpp  Message.hpp  Packet.hpp  UUID.cpp  UUID.hpp  Utils.cpp  Utils.hpp  configmanager.cpp  configmanager.hpp  crypto.cpp  crypto.hpp  cryptomanager.cpp  cryptomanager.hpp  json.hpp
